Improve reflective creation of objects